Fix 'postgresql sequence export uses uncommon sequence name'.

BUG:350238
FIXED-IN:2.16.80 (KDE Applications 15.07.80)